# Video-Compression-Script

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AmeCompression.spec  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.ja.md  README.ja.typ  README.md  README.typ  compress_video.py  dev.bat  pyproject.toml  run.py
.gemini/: styleguide.md
.github/workflows/: build.yml  notify-discord.yml  opencode.yml  tests.yml
.typst/: A4-Ame-Common.typ  A4-Ame-Kyo.typ  A4-Ame-SansSerif.typ  A4-Ame-Serif.typ
backend/: __main__.py  audio.py  config.py  ffmpeg.py  models.py  progress_handler.py  settings.py  utils.py  video.py  volume.py
backend/api/: __init__.py  app.py  job_runner.py
backend/api/blueprints/: jobs.py  media.py  settings.py
documents/: development_plan.md  migration_guide.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/src/: App.css  App.tsx  electron.d.ts  index.css  profiles.ts
frontend/src/components/: FloatingBar.tsx  Layout.tsx  ProgressPanel.tsx  Sidebar.tsx
frontend/src/hooks/: useJobs.ts
frontend/src/i18n/: config.ts
frontend/src/i18n/locales/: en.json  ja.json
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/views/: MediaView.tsx  SettingsView.tsx
gui/: __init__.py
gui/i18n/: __init__.py  en.json  ja.json  translations.py
scripts/: build.py  check_suppression_comments.py
tests/: conftest.py  test_api_basic.py  test_api_extended.py  test_api_regression.py  test_colors.py  test_compression_worker.py  test_config.py  test_ffmpeg.py  test_gui_utils.py  test_i18n.py  test_utils.py  test_volume.py
video_compressor/: __init__.py  __main__.py  audio.py  cli.py  config.py  ffmpeg.py  models.py  progress.py  progress_handler.py  settings.py  utils.py  video.py  volume.py
video_compressor/api/: __init__.py  app.py  config.py  job_runner.py
video_compressor/api/blueprints/: jobs.py  media.py  settings.py
video_compressor/gui/: app.py  compression_worker.py  utils.py
video_compressor/gui/components/: __init__.py  denoise_section.py  file_drop_frame.py  file_list.py  progress_panel.py  volume_section.py
video_compressor/gui/i18n/: en.json  ja.json  translations.py
video_compressor/gui/theme/: __init__.py  colors.py  fonts.py
video_compressor/gui/views/: __init__.py  audio_view.py  settings_view.py  video_audio_view.py  video_view.py
web/: package.json
web/electron/: main.ts  preload.ts
web/src/: App.css  App.tsx
web/src/components/: ProgressPanel.tsx
web/src/hooks/: useJobs.ts
web/src/types/: index.ts
web/src/views/: AudioView.tsx  SettingsView.tsx  VideoView.tsx
