# =============================================================================
# AmeCompression - Project Configuration
# =============================================================================

[project]
name = "ame-compression"
version = "1.0.6"
description = "Video/Audio compression tool using FFmpeg with SVT-AV1 codec (video) and MP3 codec (audio)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tarminjapan" },
]
keywords = ["video", "audio", "compression", "ffmpeg", "av1", "mp3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "requests>=2.33.1",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pre-commit>=4.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyinstaller>=6.0",
]

[project.scripts]
ame-compression = "video_compressor.cli:main"

# =============================================================================
# Ruff - Linter & Formatter (replaces black, isort, flake8, etc.)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["video_compressor", "tests"]

# Exclude patterns
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
# Rule selection:
#   E/W  - pycodestyle
#   F    - pyflakes
#   I    - isort
#   UP   - pyupgrade
#   B    - flake8-bugbear
#   SIM  - flake8-simplify
#   RUF  - ruff-specific rules
#   ERA  - eradicate (commented-out code)
#   ANN  - flake8-annotations
#   D    - pydocstyle
#   S    - flake8-bandit (security)
#   PERF - perflint (performance)
#   N    - pep8-naming
#   PL   - pylint
#   ARG  - flake8-unused-arguments
#   PTH  - flake8-use-pathlib
select = [
    "E", "W", "F", "I", "UP", "B", "SIM", "RUF", "ERA",
    "ANN", "D", "S", "PERF", "N", "PL", "ARG", "PTH"
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "T201",    # print() statements - CLI tool
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# ダブルクォート、インデント、改行コードを固定
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# =============================================================================
# Pyright (Pylance static type checker)
# =============================================================================
[tool.pyright]
# Use the same checker in VS Code and pre-commit, with local stubs for third-party typing gaps.
typeCheckingMode = "strict"
pythonVersion = "3.10"
pythonPlatform = "All"
stubPath = "typings"

# Include/exclude paths
include = ["video_compressor"]
exclude = ["**/__pycache__", "**/node_modules", "**/.*"]

# Gradual typing: suppress errors for untyped code
reportArgumentType = "error"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUntypedFunctionDecorator = "none"

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# =============================================================================
# Scripts
# ==============================================================================
[tool.setuptools.packages.find]
include = ["video_compressor"]
